Implement URL shortening and enhanced social media sharing with dynamic meta tags and thumbnails

--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <meta name="author" content="Voice Of Bharat" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://voiceofbharat.com/" />
     <meta property="og:title" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="og:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/favicon.ico" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:site_name" content="Voice of Bharat" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@voiceofbharat" />
-    <meta name="twitter:image" content="/public/favicon.ico" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://voiceofbharat.com/" />
+    <meta property="twitter:title" content="Voice Of Bharat - Latest News & Updates" />
+    <meta property="twitter:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
+    <meta property="twitter:image" content="/logo.png" />
+    <meta property="twitter:site" content="@voiceofbharat" />
 
     <!-- Poppins Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
