Update short URL domain to voiceofbharat.live

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://voiceofbharat.com/" />
+    <meta property="og:url" content="https://voiceofbharat.live/" />
     <meta property="og:title" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="og:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
     <meta property="og:image" content="/logo.png" />
@@ -18,7 +18,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://voiceofbharat.com/" />
+    <meta property="twitter:url" content="https://voiceofbharat.live/" />
     <meta property="twitter:title" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="twitter:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
     <meta property="twitter:image" content="/logo.png" />
