--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <meta property="og:url" content="https://voiceofbharat.live/" />
     <meta property="og:title" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="og:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://voiceofbharat.live/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="og:site_name" content="Voice of Bharat" />
 
     <!-- Twitter -->
@@ -21,8 +24,15 @@
     <meta property="twitter:url" content="https://voiceofbharat.live/" />
     <meta property="twitter:title" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="twitter:description" content="Voice Of Bharat brings you the latest news, videos, and updates from across India." />
-    <meta property="twitter:image" content="/logo.png" />
+    <meta property="twitter:image" content="https://voiceofbharat.live/logo.png" />
+    <meta property="twitter:image:alt" content="Voice Of Bharat - Latest News & Updates" />
     <meta property="twitter:site" content="@voiceofbharat" />
+    <meta property="twitter:creator" content="@voiceofbharat" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="canonical" content="https://voiceofbharat.live/" />
+    <link rel="canonical" href="https://voiceofbharat.live/" />
 
     <!-- Poppins Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
