Initial commit: Push Voice of Bharat codebase

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <!-- Poppins Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Preload Poppins Google Font -->
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" />
+    <!-- Preload Hero Image (replace with your Cloudinary hero image if available) -->
+    <link rel="preload" as="image" href="/placeholder-hero.jpg" />
   </head>
 
   <body
