Add video sharing endpoints, update frontend share logic, and update url_shortener table for video support

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <meta name="canonical" content="https://voiceofbharat.live/" />
     <link rel="canonical" href="https://voiceofbharat.live/" />
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8787867806919513"
+     crossorigin="anonymous"></script>
+
     <!-- Poppins Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Preload Poppins Google Font -->
